@@ -11,6 +11,12 @@ General
   o Added backwards compatibility (with deprecation warning) for using
     thumbnails-path instead of thumbnail-path in casparcg.config.
 
+AMCP
+----
+
+  o INFO PATHS now adds all the path elements even if they are using the default
+    values.
+
 CasparCG 2.1.0 Beta 1 (w.r.t 2.0.7 Stable)
 ==========================================
 
